# corporate-hotel-booking-kata-python

./: .gitignore  README.md  pyproject.toml
corporate_hotel_booking_kata_python/domain/: booking_service.py  company_service.py  hotel.py  hotel_service.py  model.py
corporate_hotel_booking_kata_python/domain/ports/: booking_repository.py  company_repository.py  guid_generator.py  hotel_repository.py
features/: corporate_hotel_booking.feature
features/steps/: steps.py
features/steps/fake_infrastructure/: booking_repository.py  company_repository.py  hotel_repository.py
tests/: test_corporate_hotel_booking_kata_python.py
tests/corporate_hoteL_booking_kata_python/: test_booking_service.py  test_company_service.py  test_corporate_hotel_booking_kata_python.py  test_hotel_service.py
