[tool.poetry]
name = "corporate-hotel-booking-kata-python"
version = "0.1.0"
description = ""
authors = ["Marc Mauri Alloza <marc.mauri@codurance.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]
pytest = "7.2.0"
autopep8 = "2.0.0"
flake8 = "5.0.4"
mypy = "0.982"
behave = "1.2.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"